--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "rodal": "^1.8.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
